--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "private": true,
-  "version": "0.0.0",
-  "name": "example",
-  "devDependencies": {
-    "jest": ">=25.1.0",
-    "ts-jest": ">=25.2.0",
-    "@types/jest": ">=25.1.2"
-  },
-  "dependencies": {
-    "typescript": "4.0.2"
-  },
-  "scripts": {
-    "test": "jest --no-cache"
-  }
+	"private": true,
+	"version": "0.0.0",
+	"name": "example",
+	"devDependencies": {
+		"jest": ">=25.1.0",
+		"ts-jest": ">=25.2.0",
+		"@types/jest": ">=25.1.2"
+	},
+	"dependencies": {
+		"@types/node": "^14.11.8",
+		"typescript": "4.0.2"
+	},
+	"scripts": {
+		"test": "jest --no-cache"
+	}
 }
